# Software-Developer-IIT-Madras-celery-assignment

./: .env  Dockerfile  README.md  docker-compose.yml  pyproject.toml
config/: redis.conf
myproject/: celery.py  settings.py  urls.py
reports/: models.py  serializers.py  tasks.py  urls.py  views.py
